--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang ="en">
 <html>
-<h1>hello world23</h1>
+<header>
+    <h1>SCC CS clubsdgsgfdsfg</h1>
+</header>
+
 
 </html>
