--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,11 @@
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
 <%- include("partials/header") -%>
+
+<body>
+
 <%- include("partials/navbar") -%>
+
+</body>
+</html>
