moved admin/auth routes

--- a/views/addProject.ejs
+++ b/views/addProject.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
-<h1>Add projects page</h1>
+<%- include("partials/header") -%>
+<%- include("partials/navbar") -%>
 
 </html>
