--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,6 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<!DOCTYPE html>
+<html>
+<%- include("partials/header") -%>
+<%- include("partials/navbar") -%>
+
+</html>
