--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,3 @@
-<%- include("partials/header") -%>
-<%- include("partials/navbar") -%>
-
-</html>
+<h1><%= message %></h1>
+<h2><%= error.status %></h2>
+<pre><%= error.stack %></pre>
