Clean up mismatched tags

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,4 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <%- include("partials/header") -%>
+
+<body>
+
 <%- include("partials/navbar") -%>
 
+<main>
+  <h1>Contact</h1>
+</main>
+
+</body>
 </html>
