--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<%- include("partials/header") -%>
+
+<body>
+
 <%- include("partials/navbar") -%>
 
+<main>
+  <h1>Users</h1>
+</main>
+
+</body>
 </html>
