--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,10 +10,24 @@
 
   <!-- The rest of the navbar elements -->
   <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav mr-auto">
+    <ul class="navbar-nav me-auto">
       <!-- Here are the navbar items -->
       <li class="nav-item">
         <a class="nav-link" href="/about">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/announcements">Announcements</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/contact">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/projects">Projects</a>
+      </li>
+    </ul>
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/auth/login">Login</a>
       </li>
     </ul>
   </div>
