Add nav link highlighting for current page

--- a/views/announcements.ejs
+++ b/views/announcements.ejs
@@ -5,7 +5,7 @@
 
 <body>
 
-<%- include("partials/navbar") -%>
+<%- include("partials/navbar", {page: 'announcements'}) -%>
 
 <main>
   <h1>Announcements</h1>
