--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
 
 <body>
 
-<%- include("partials/navbar") -%>
+<%- include("partials/navbar", {page: 'index'}) -%>
 
 <main>
   <h1>Hello World!</h1>
