--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,3 +1,7 @@
+<% if (typeof page === 'undefined') {
+  page = '';
+} %>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
   <!-- The SCC CS Club link -->
   <a class="navbar-brand " href="/">SCC CS Club</a>
@@ -13,21 +17,24 @@
     <ul class="navbar-nav me-auto">
       <!-- Here are the navbar items -->
       <li class="nav-item">
-        <a class="nav-link" href="/about">About</a>
+        <a class="nav-link <% if (page === 'index') { %> active <% } %>" href="/">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/announcements">Announcements</a>
+        <a class="nav-link <% if (page === 'about') { %> active <% } %>" href="/about">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/contact">Contact</a>
+        <a class="nav-link <% if (page === 'announcements') { %> active <% } %>" href="/announcements">Announcements</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/projects">Projects</a>
+        <a class="nav-link <% if (page === 'contact') { %> active <% } %>" href="/contact">Contact</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link <% if (page === 'projects') { %> active <% } %>" href="/projects">Projects</a>
       </li>
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="/auth/login">Login</a>
+        <a class="nav-link <% if (page === 'login') { %> active <% } %>" href="/auth/login">Login</a>
       </li>
     </ul>
   </div>
