--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -5,7 +5,7 @@
 
 <body>
 
-<%- include("partials/navbar") -%>
+<%- include("partials/navbar", {page: 'projects'}) -%>
 
 <main>
   <h1>Projects</h1>
