Switch to header/footer partial system

--- a/views/announcements.ejs
+++ b/views/announcements.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("partials/header", {page: 'announcements'}) -%>
 
-<%- include("partials/header") -%>
+<h1>Announcements</h1>
 
-<body>
-
-<%- include("partials/navbar", {page: 'announcements'}) -%>
-
-<main>
-  <h1>Announcements</h1>
-</main>
-
-</body>
-</html>
+<%- include("partials/footer") %>
