--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("partials/header", {page: 'login'}) -%>
 
-<%- include("partials/header") -%>
+<h1>Login</h1>
 
-<body>
-
-<%- include("partials/navbar", {page: 'login'}) -%>
-
-<main>
-  <h1>Login</h1>
-</main>
-
-</body>
-</html>
+<%- include("partials/footer") %>
