--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
+<%- include("partials/header", {page: 'about'}) -%>
 
-<%- include("partials/header") -%>
+<h1>About</h1>
 
-<body>
-
-<%- include("partials/navbar", {page: 'about'}) -%>
-
-<main>
-  <h1>About</h1>
-</main>
-
-</body>
-</html>
+<%- include("partials/footer") %>
