--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,15 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <%- include("partials/header") -%>
 
-<body>
+<h1>Admin</h1>
 
-<%- include("partials/navbar") -%>
-
-<main>
-  <h1>Admin</h1>
-</main>
-
-</body>
-</html>
+<%- include("partials/footer") %>
