--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Shoreline CS Club</title>
@@ -7,3 +10,15 @@
   <script src="https://kit.fontawesome.com/62ec159aa3.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
+<body>
+
+<%# We might choose to move the navbar elsewhere later, but for now it makes sense in the header. %>
+
+<%# Make it so the 'page' parameter is optional. %>
+<% if (typeof page === 'undefined') {
+  page = '';
+} %>
+<%- include("navbar", {page: page}) -%>
+
+<main>
