--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,33 @@
 </main>
 
+<footer class="bg-footer">
+  <div class="container-md p-5">
+    <div class="row g-5">
+      <div class="col d-flex flex-row justify-content-center">
+        <img width="200" src="images/Shoreline_CS_Club__1_-removebg-preview.png" alt="SCC CS Club Logo"/>
+      </div>
+      <div class="col">
+        <div class="ms-md-5 h-100 d-flex flex-column justify-content-around">
+          <div>
+            <a class="link-light text-decoration-none h4" href="/">Home</a>
+          </div>
+          <div>
+            <a class="link-light text-decoration-none h4" href="/about">About</a>
+          </div>
+          <div>
+            <a class="link-light text-decoration-none h4" href="/projects">Projects</a>
+          </div>
+          <div>
+            <a class="link-light text-decoration-none h4" href="/announcements">Announcements</a>
+          </div>
+          <div>
+            <a class="link-light text-decoration-none h4" href="/contact">Contact</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+
 </body>
 </html>
