--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,9 +3,9 @@
   page = '';
 } %>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light p-2">
+<nav class="navbar navbar-expand-lg navbar-light bg-secondary p-2">
   <!-- The SCC CS Club link -->
-  <a class="navbar-brand " href="/">SCC CS Club</a>
+  <a class="navbar-brand ms-2" href="/">SCC CS Club</a>
 
   <!-- Button for opening the navbar when on mobile -->
   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
