--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,25 @@
 <%- include("partials/header", {page: 'index'}) -%>
 
-<h1>Hello World!</h1>
+<div class="picture-area bg-pine container-fluid d-flex justify-content-center align-items-center">
+  <h2>Images or something here</h2>
+</div>
+
+<div class="container-md p-5">
+  <div class="row">
+    <div class="col d-flex flex-column justify-content-around">
+      <h1>Hello World!</h1>
+      <div>
+        <p>
+          Description...
+        </p>
+      </div>
+    </div>
+    <div class="col p-2">
+      <div class="border d-flex justify-content-center align-items-center border-pine" style="height: 300px; border-width: 20px !important; border-">
+        <h2>Placeholder</h2>
+      </div>
+    </div>
+  </div>
+</div>
 
 <%- include("partials/footer") %>
