--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,17 @@
 <%- include("partials/header") -%>
 <%- include("partials/navbar") -%>
 
+<h1>Sign up</h1>
+<form action="createUser" method="post">
+    <section>
+        <label for="username">Username</label>
+        <input id="username" name="username" type="text" autocomplete="username" required>
+    </section>
+    <section>
+        <label for="new-password">Password</label>
+        <input id="new-password" name="password" type="password" autocomplete="new-password" required>
+    </section>
+    <button type="submit">Sign up</button>
+</form>
+
 </html>
