--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
+/* Root/Variables */
+
+:root {
+    --primary-green: #00685e;
+    --primary-white: #dedede;
+    --primary-black: #1c1c1c;
+    --secondary-green: #e6f7f5;
+    }
+
 /* Sizing */
 
 html, body {
@@ -11,15 +20,15 @@ main {
 /* Colors */
 
 h1, h2 {
-    color: #00685e;
+    color: var(--primary-green);
 }
 
 .bg-secondary {
-    background-color: #dedede !important;
+    background-color: var(--primary-white) !important;
 }
 
 .bg-pine {
-    background-color: #00685f !important;
+    background-color: var(--primary-green) !important;
     color: #ffffff;
 }
 
@@ -28,11 +37,11 @@ h1, h2 {
 }
 
 .border-pine {
-    border-color: #00685f !important;
+    border-color: var(--primary-green) !important;
 }
 
 .bg-footer {
-    background-color: #1c1c1c !important;
+    background-color: var(--primary-black) !important;
 }
 
 /* Text */
@@ -80,4 +89,28 @@ h1 {
     .picture-area {
         height: 800px;
     }
+}
+
+/* Projects Area */
+#projects-carousel {
+    margin: auto;
+    padding-bottom: 15px;
+    width: 45%;
+}
+
+.carousel .carousel-indicators li {
+    width: 10px;
+    height: 10px;
+    border-radius: 100%;
+    background-color: var(--primary-green)
+}
+
+.carousel-control-prev {
+    position: absolute;
+    left: -120px;
+}
+
+.carousel-control-next {
+    position: absolute;
+    right: -120px;
 }
