--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header") -%>
 
 <h1>Sign up</h1>
-<form action="createUser" method="post">
+<form action="/auth/createUser" method="post">
     <section>
         <label for="username">Username</label>
         <input id="username" name="username" type="text" autocomplete="username" required>
