renamed auth page headings
changed sign up/sign in to register/login and added footer partial

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-<h1>Sign up</h1>
+<h1>Register</h1>
 <form action="/auth/createUser" method="post">
     <section>
         <label for="username">Username</label>
@@ -10,7 +10,8 @@
         <label for="new-password">Password</label>
         <input id="new-password" name="password" type="password" autocomplete="new-password" required>
     </section>
-    <button type="submit">Sign up</button>
+    <button type="submit">Register</button>
 </form>
 
+<%- include("partials/footer") %>
 </html>
