--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header", {page: 'login'}) -%>
 
-<h1>Sign in</h1>
+<h1>Login</h1>
 <form action="/auth/login/password" method="post">
     <section>
         <label for="username">Username</label>
@@ -10,10 +10,11 @@
         <label for="current-password">Password</label>
         <input id="current-password" name="password" type="password" autocomplete="current-password" required>
     </section>
-    <button type="submit">Sign in</button>
+    <button type="submit">Login</button>
 </form>
 <% if (message) { %>
     <p><%= message %></p>
 <% } %>
 
+<%- include("partials/footer") %>
 </html>
