Fix login and add user data to every page

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,6 +12,7 @@
     </section>
     <button type="submit">Login</button>
 </form>
+<%- user -%>
 <% if (message) { %>
     <p><%= message %></p>
 <% } %>
