--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -35,7 +35,11 @@
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link <% if (page === 'login') { %> active <% } %>" href="/auth/login">Login</a>
+        <% if (user) { %>
+          <a class="nav-link" href="/auth/logout">Logout</a>
+          <% } else { %>
+            <a class="nav-link <% if (page === 'login') { %> active <% } %>" href="/auth/login">Login</a>
+            <% } %>
       </li>
     </ul>
   </div>
