Update announcement to show oldest first

--- a/views/announcements.ejs
+++ b/views/announcements.ejs
@@ -4,7 +4,7 @@
     <h1 class="page-title">Announcements</h1>
 </div>
 <% for (let i = announcements.length; i >= 0; i--) { %>
-    <% let announcement = announcemtns[i]; %>
+    <% let announcement = announcements[i]; %>
 <div class="accordion outer-box">
     <label class="header-expand">
         <h2 class="announcement-date"><%=announcement.date%></h2>
