--- a/views/announcements.ejs
+++ b/views/announcements.ejs
@@ -3,7 +3,7 @@
 <div class="title-box">
     <h1 class="page-title">Announcements</h1>
 </div>
-<% for (let i = announcements.length; i >= 0; i--) { %>
+<% for (let i = announcements.length - 1; i >= 0; i--) { %>
     <% let announcement = announcements[i]; %>
 <div class="accordion outer-box">
     <label class="header-expand">
