--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -32,6 +32,9 @@
       <li class="nav-item">
         <a class="nav-link <% if (page === 'contact') { %> active <% } %>" href="/contact">Contact</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link <% if (page === 'contact') { %> active <% } %>" href="/discord">Discord</a>
+      </li>
     </ul>
     <ul class="navbar-nav">
       <li class="nav-item">
