Discord link opens in new tab

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -33,7 +33,7 @@
         <a class="nav-link <% if (page === 'contact') { %> active <% } %>" href="/contact">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link <% if (page === 'contact') { %> active <% } %>" href="/discord" target="_blank">Discord</a>
+        <a class="nav-link" href="/discord" target="_blank">Discord</a>
       </li>
     </ul>
     <ul class="navbar-nav">
