--- a/views/announcements.ejs
+++ b/views/announcements.ejs
@@ -21,7 +21,7 @@
     <div class="row align-items-center">
         <div class="col"></div>
         <div class="newer-button col">
-            <p>Newer</p>
+            <a href="">Newer</a>
         </div>
         <div class="page-numbers col-3 text-center">
             <a href="">1</a>
@@ -31,7 +31,7 @@
             <a href="">5</a>
         </div>
         <div class="older-button col text-end">
-            <p>Older</p>
+            <a href="">Older</a>
         </div>
         <div class="col"></div>
     </div>
