--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -146,16 +146,12 @@ h1 {
 
 .announcements-box {
     padding-top: 30px;
+    min-height: 950px;
 }
 
 .page-numbers-box {
     background-color: var(--primary-white);
     height: 90px;
-    /* NOTE: Not great. Needs fixing. */
-    position: absolute;
-    bottom: 144px;
-    right: 0;
-    left: 0;
 }
 
 .page-title {
@@ -186,7 +182,7 @@ h1 {
 
 .outer-box {
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     background-color: var(--primary-green);
     border: 2px solid var(--primary-green);
     border-radius: 8px 8px 3px 3px;
